
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

MODx Revolution 2.0.0-rc-2 ($LastChangedRevision$, $LastChangedDate$)
====================================
- [#MODX-1789] Added code to attempt to create core/components and assets/components after install. If fails, displays a notice to user to manually create them themselves to allow Package Management to work properly.
- [#MODX-1839] Fixed grammatical error in forgot login link on login page
- [#MODX-1846] Fixed invalid markup for username in top right
- [#MODX-1854] Fixed invalid references to cultureKey that broke cultureKey setting effectiveness
- [#MODX-1785] Fixed invalid password variable reference in invoke notfound event in login processor
- [#MODX-1784] Fixed invalid event call on user update, as well as added event invoking into updatefromgrid processor
- [#MODX-1836] Set default context_key in modResource objects to 'web'
- Fixed bug with system info page and active users that would cause error in error log
- [#MODX-1788] File tree now respects filemanager_path setting. Also cleaned up file browsing processors.
- Upgraded ExtJS to version 3.2
- Updated version to 2.0.0-rc-2 for svn development and issue tracking
- [#MODX-1778] Fixed error that shows up if E_NOTICE set to true in setup/ index due to servers not posting a HTTPS server global

MODx Revolution 2.0.0-rc-1 (LastChangedRevision: 6614, LastChangedDate: 2010-03-22 16:41:04 -0500 (Mon, 22 Mar 2010))
====================================
- Prepared for rc1 release
- Fixed CSS compression copying in build.xml 
- Fixed regClient*() functions to work again on cacheable scripts
- Move element source and include cache files outside of context cache directories since they should be cleared only when elements are updated