@@ -15,6 +15,9 @@ $_lang['by'] = 'by';
 $_lang['core_err_invalid'] = 'You must have a valid core installation with an active workspace to run the build.';
 $_lang['description'] = 'Description';
 $_lang['details'] = 'Details';
+$_lang['dir_err_assets'] = 'Your assets/ directory was not able to be created at: [[+path]] <br />You will need to create this directory and make it writable if you want to use Package Management or 3rd Party Components.';
+$_lang['dir_err_assets_comp'] = 'Your assets/components/ directory was not able to be created at: [[+path]] <br />You will need to create this directory and make it writable if you want to use Package Management or 3rd Party Components.';
+$_lang['dir_err_core_comp'] = 'Your core/components/ directory was not able to be created at: [[+path]] <br />You will need to create this directory and make it writable if you want to use Package Management or 3rd Party Components.';
 $_lang['download'] = 'Download';
 $_lang['downloaded'] = 'Downloaded';
 $_lang['download_extras'] = 'Download Extras';
